--- a/project/.env
+++ b/project/.env
@@ -1,6 +1,6 @@
 
 JWT_SECRET=your_secure_secret_key
 
-MONGODB_URI=mongodb+srv://krishnadb:krishna@11@cluster0.1gian.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://krishnadb:<password>@cluster0.1gian.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 PORT = 4000
